--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.tilt {
+  height: 200px;
+  width: 300px;
+  margin: 0 auto;
+  transition: box-shadow 0.1s, transform 0.1s;
+}
+
+.tilt:hover {
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.6);
+  cursor: pointer;
+}
+
